...
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/blueColor"
        >
        <TextView
            android:id="@+id/previous_step"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Back"
            android:gravity="center"
            android:background="@color/blueColor"
            android:clickable="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_marginRight="1dp"
            android:visibility="visible"
            />

        <TextView
            android:id="@+id/next_step"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Next"
            android:gravity="center"
            android:background="@color/blueColor"
            android:clickable="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:visibility="visible" />
...
